fixed content overflowing grid on smaller screens that are still bigger than mobile

--- a/Andrew-Marks-Portfolio-Website/css/style.css
+++ b/Andrew-Marks-Portfolio-Website/css/style.css
@@ -1278,6 +1278,7 @@ large screens
 
     .resume--main-body {
         padding: 40px;
+        min-width: 0;
     }
 
     .resume--main-title {
@@ -1290,6 +1291,7 @@ large screens
         display: grid;
         grid-template-columns: 1fr 1fr;
         margin-top: 16px;
+        min-width: 0px;
     }
 
     .resume--main-job-title {
@@ -1298,10 +1300,12 @@ large screens
         color: var(--clr-light-bg);
         background-color: var(--clr-headings);
         padding: 12px;
+        min-width: 0;
     }
 
     .resume--main-job-blank {
         background-color: var(--clr-light-bg);
+        min-width: 0px;
     }
 
     .resume--main-contact-container {
@@ -1310,7 +1314,7 @@ large screens
         gap: 24px;
         justify-content: space-between;
         margin-top: 12px;
-        overflow: hidden;
+        min-width: 0;
     }
 
     .resume--main-contact-link {
@@ -1318,6 +1322,7 @@ large screens
         font-size: var(--fs-body);
         font-weight: var(--fw-reg);
         color: var(--clr-primary);
+        min-width: 0;
         word-wrap: break-word;
     }
 
